# ros2_package_template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name | snakecase }}/: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  {{ cookiecutter.project_name | snakecase }}.repos
{{ cookiecutter.project_name | snakecase }}/.github/workflows/: build_and_test.yaml
{{ cookiecutter.project_name | snakecase }}/include/{{ cookiecutter.project_name | snakecase }}/: {{ cookiecutter.class_name | snakecase }}.hpp
{{ cookiecutter.project_name | snakecase }}/src/: main.cpp  {{ cookiecutter.class_name | snakecase }}.cpp
{{ cookiecutter.project_name | snakecase }}/test/: {{ cookiecutter.class_name | snakecase }}_test.cpp
