<?xml version="1.0"?>
<package format="3">
    <name>{{ cookiecutter.project_name | snakecase }}</name>
    <version>0.0.1</version>
    <description>{{ cookiecutter.project_short_description }}</description>

    <maintainer email="{{ cookiecutter.author_email }}">{{ cookiecutter.author }}</maintainer>
    <author email="{{ cookiecutter.author_email }}">{{ cookiecutter.author }}</author>

    <license>BSD</license>

    <url type="website">https://github.com/PickNikRobotics/{{ cookiecutter.project_name | snakecase }}</url>
    <url type="bugtracker">https://github.com/PickNikRobotics/{{ cookiecutter.project_name | snakecase }}/issues</url>
    <url type="repository">https://github.com/PickNikRobotics/{{ cookiecutter.project_name | snakecase }}/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>s
    <buildtool_depend>eigen3_cmake_module</buildtool_depend>
    <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

    <depend>eigen</depend>
    <depend>rclcpp</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
